korrekte Anzeige von "nächste Leerung"

--- a/app/src/main/res/layout/activity_overview.xml
+++ b/app/src/main/res/layout/activity_overview.xml
@@ -123,7 +123,7 @@
             android:layout_height="wrap_content"
             android:textSize="10px"
             android:text="Nächste Leerung am: "/>
-        <TextView
+        <TextView android:id="@+id/next_collect"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="15px"
