--- a/app/src/main/res/layout/activity_overview.xml
+++ b/app/src/main/res/layout/activity_overview.xml
@@ -31,7 +31,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="20px"
-        android:text="/26"/>
+        android:text="/"/>
+    <TextView android:id="@+id/max_garbage_sum"
+        android:gravity="right"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="20px"
+        android:text="0"/>
     </LinearLayout>
     <TextView
         android:layout_width="wrap_content"
@@ -60,7 +66,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="20px"
-            android:text="/26"/>
+            android:text="/"/>
+        <TextView android:id="@+id/max_erase"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="20px"
+            android:text="0"/>
     </LinearLayout>
     <LinearLayout
         android:gravity="left"
@@ -84,7 +95,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="20px"
-            android:text="/8"/>
+            android:text="/"/>
+        <TextView android:id="@+id/max_save"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="20px"
+            android:text="0"/>
     </LinearLayout>
     <TextView
         android:layout_width="wrap_content"
@@ -123,7 +139,7 @@
             android:layout_height="wrap_content"
             android:textSize="10px"
             android:text="Nächste Leerung am: "/>
-        <TextView android:id="@+id/next_collect"
+        <TextView android:id="@+id/next_collect_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="15px"
