--- a/app/src/main/res/layout/activity_overview.xml
+++ b/app/src/main/res/layout/activity_overview.xml
@@ -187,6 +187,21 @@
         android:layout_width="10px"
         android:layout_weight="1"
         android:layout_height="wrap_content" />
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="10px"
+            android:text="Rückgängig für den: "/>
+        <TextView android:id="@+id/revert_for"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="15px"
+            android:text="01.01.2016"/>
+    </LinearLayout>
     <Button android:id="@+id/counter_minus"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
