--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -2,14 +2,14 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item android:id="@+id/show_erase"
-        android:icon="@drawable/ic_action_document"
+        android:icon="@drawable/ic_assignment"
         android:title="@string/show_erase"
         android:visible="true"
         app:showAsAction="ifRoom"/>
 
     <item
         android:id="@+id/show_dates"
-        android:icon="@drawable/ic_action_alarm"
+        android:icon="@drawable/ic_alarm"
         android:title="@string/show_garbage_dates"
         android:visible="true"
         app:showAsAction="ifRoom"/>
@@ -25,12 +25,12 @@
         android:icon="@drawable/ic_info"
         android:title="@string/show_info"
         android:visible="true"
-        app:showAsAction="never"/>
+        app:showAsAction="ifRoom"/>
 
     <item android:id="@+id/action_settings"
         android:title="@string/action_settings"
         android:icon="@drawable/ic_settings"
         android:visible="true"
-        app:showAsAction="never"
+        app:showAsAction="ifRoom"
         />
 </menu>
