--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -18,19 +18,19 @@
         android:icon="@drawable/ic_help"
         android:title="@string/help"
         android:visible="true"
-        app:showAsAction="ifRoom"/>
+        app:showAsAction="always"/>
 
     <item
         android:id="@+id/show_info"
         android:icon="@drawable/ic_info"
         android:title="@string/show_info"
         android:visible="true"
-        app:showAsAction="ifRoom"/>
+        app:showAsAction="always"/>
 
     <item android:id="@+id/action_settings"
         android:title="@string/action_settings"
         android:icon="@drawable/ic_settings"
         android:visible="true"
-        app:showAsAction="ifRoom"
+        app:showAsAction="always"
         />
 </menu>
