--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,5 @@
 <resources>
     <color name="colorPrimary">#3FB551</color>
     <color name="colorPrimaryDark">#309F3F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorAccent">#ff4052</color>
 </resources>
