--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -5,14 +5,14 @@
         android:icon="@drawable/ic_assignment"
         android:title="@string/show_erase"
         android:visible="true"
-        app:showAsAction="ifRoom"/>
+        app:showAsAction="always"/>
 
     <item
         android:id="@+id/show_dates"
         android:icon="@drawable/ic_alarm"
         android:title="@string/show_garbage_dates"
         android:visible="true"
-        app:showAsAction="ifRoom"/>
+        app:showAsAction="always"/>
 
     <item android:id="@+id/show_help"
         android:icon="@drawable/ic_help"
