--- a/app/src/main/res/layout/activity_show__dates.xml
+++ b/app/src/main/res/layout/activity_show__dates.xml
@@ -6,7 +6,10 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     tools:context="de.it_garten.micha.garbagesaver.Show_Dates">
-
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -20,12 +23,19 @@
             app:popupTheme="@style/AppTheme.PopupOverlay" />
 
     </android.support.design.widget.AppBarLayout>
-
-        <TextView
-            android:layout_width="wrap_content"
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:fillViewport="true"
+        android:id="@+id/show_dates_scroll">
+        <WebView
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="12sp"
+            android:padding="20dp"
+            android:textSize="20sp"
             android:id="@+id/show_dates_list"
             android:paddingTop="60dp"
             android:text="keine Daten"/>
+    </ScrollView>
+</LinearLayout>
 </android.support.design.widget.CoordinatorLayout>
